--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -682,14 +682,14 @@
             transform: translateY(-50%);
             width: 20px;
             height: 20px;
-            background-image: url("../../../dist/images/plus-icon.svg");
+            background-image: url("/dist/images/plus-icon.svg");
             background-size: contain;
             background-repeat: no-repeat;
             transition: transform 0.3s ease;
         }
 
         &[aria-expanded="true"]::after {
-            background-image: url("../../../dist/images/minus-icon.svg");
+            background-image: url("/dist/images/minus-icon.svg");
         }
     }
 
