--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -182,13 +182,13 @@
 
 
     @include respond(sm) {
-        a.mobileView.join__now {
+        .join__now {
             color: #fff;
             text-decoration: none;
             max-width: 100%;
             height: 55px;
             font-size: 16px;
-            font-weight: 500;
+            font-weight: bold;
             background: #EE7231;
             display: inline-flex;
             text-align: center;
@@ -198,9 +198,8 @@
             border-radius: 50px;
             padding: 0 27px;
             text-transform: capitalize;
-            transition: background 0.3s ease;
             display: flex !important;
-            margin: 20px;
+            margin: 30px 20px;
         }
     }
 
